# vendingmachine

./: .env.example  .gitignore  Makefile  README.md  demo_zen_machine.py  pyproject.toml
.github/workflows/: ci-cd.yml
.windsurf/workflows/: deploy.md
infrastructure/docker/: Dockerfile  docker-compose.dev.yml
infrastructure/k8s/: ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml  ui-services.yaml  zen-agent-deployment.yaml
tests/: __init__.py  conftest.py  test_simulation.py
ui/store_ui/: index.html  store-ui.js  styles.css
ui/zen_ui/: index.html  package-lock.json  package.json  styles.css  zen-ui.js
ui/zen_ui/src/app/: globals.css  layout.tsx  page.tsx
ui/zen_ui/src/components/: AgentStatus.tsx  Atmosphere.tsx  EconomyNetwork.tsx  MarketTicker.tsx  TelemetryPanel.tsx  VendingMachine.tsx  ZenGarden.tsx
ui/zen_ui/src/components/charts/: sparkline.tsx  trace-timeline.tsx
ui/zen_ui/src/components/drawer/: fork-slider.tsx  open-mind-drawer.tsx
ui/zen_ui/src/components/hero/: hero.tsx  machine-illustration.tsx
ui/zen_ui/src/components/telemetry/: telemetry-provider.tsx  telemetry-strip.tsx
ui/zen_ui/src/hooks/: use-intersection-observer.ts  use-onboarding.ts  use-prefers-reduced-motion.ts
ui/zen_ui/src/lib/: api.ts
zen_machine/: __init__.py  cli.py
zen_machine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zen_machine/adversary_module/: __init__.py  adversary.py
zen_machine/api/: __init__.py  live_engine.py  main.py
zen_machine/core/: __init__.py  llm_interface.py  models.py  simulation.py
zen_machine/economy/: agent_base.py  market.py
zen_machine/infrastructure/: __init__.py  database.py  redis_manager.py
zen_machine/security/: __init__.py  crypto.py
zen_machine/store_agent/: __init__.py  agent.py  cost_model.py  lead_time_model.py  llm_interface.py
zen_machine/zen_agent/: __init__.py  agent.py  demand_model.py  llm_interface.py  optimization_engine.py
(+11 files in other folders)
